# DataPipelineAgent

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nightly-agent.yml
docs/: nightly-monitor-report.json
docs/adr/: README.md
scripts/: nightly_agent.py
src/dpagent/: __init__.py  cli.py
src/dpagent/agents/: heal.py  notify.py  orchestrator.py  quality.py  schema.py
src/dpagent/core/: config.py
src/dpagent/models/: pipeline.py
tests/: test_models.py  test_orchestrator.py  test_quality.py  test_schema.py
