[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DataPipelineAgent"
version = "0.1.0"
description = "Agentic ETL orchestrator — monitors data sources, detects schema drift, and auto-heals pipelines"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow", email = "brianpelow@github" }]
keywords = ["agents", "etl", "data-pipeline", "schema-drift", "fintech", "ai-agents"]
dependencies = [
    "anthropic>=0.28.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
dp-agent = "dpagent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dpagent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"